# VoxelGame

./: .gitignore  Cargo.toml  README.md  TODO.txt
.github/workflows/: rust.yml
assets/shaders/: frag.glsl  fs_ui1.glsl  vs_ui1.glsl
config/: blocks.toml
src/: block.rs  camera.rs  chunk.rs  chunkset.rs  clock.rs  complexplanet.rs  engine.rs  entity.rs  frag.glsl  geometry.rs  main.rs  main.wgsl  memarena.rs  memblock.rs  renderer.rs  texturing.rs  ui.rs  ui.wgsl  vert.glsl  vk_select_device.rs  world.rs
